<resources>
    <string name="app_name">Calculator</string>
    <string name="backspace">backspace</string>
    <string name="multiplication">×</string>
    <string name="sum">+</string>
    <string name="equal">=</string>
    <string name="substract">-</string>
    <string name="_9">9</string>
    <string name="division">÷</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="tan">tan</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="_5">5</string>
    <string name="dot">·</string>
    <string name="_2">2</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="deg">deg</string>
    <string name="rad">rad</string>
    <string name="initial_text">0</string>
    <string name="ac">ac</string>
    <string name="open_parentesis">(</string>
    <string name="close_parentesis">)</string>
</resources>