<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    app:background="@null"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button26"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="none"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="#a5a5a5"
        android:onClick="close_parentesis_click"
        android:text="@string/close_parentesis"
        android:textSize="36sp"
        app:backgroundTint="#a5a5a5"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button27"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button25"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button25"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="none"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="#a5a5a5"
        android:includeFontPadding="false"
        android:onClick="open_parentesis_click"
        android:text="@string/open_parentesis"
        android:textSize="36sp"
        app:backgroundTint="#a5a5a5"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button26"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button28"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="clear_click"
        android:text="@string/ac"
        android:textColor="#d93d46"
        app:backgroundTint="#2d191e"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button27"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/button27"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:contentDescription="@string/backspace"
        android:onClick="back_click"
        android:src="@drawable/ic_outline_backspace_24"
        app:backgroundTint="#2d191e"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button28"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button26"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:tint="#d93d46" />

    <Button
        android:id="@+id/button21"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="multiplication_click"
        android:text="@string/multiplication"
        app:backgroundTint="#f1a43c"
        app:layout_constraintBottom_toTopOf="@+id/button22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button23"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="sum_click"
        android:text="@string/sum"
        app:backgroundTint="#f1a43c"
        app:layout_constraintBottom_toTopOf="@+id/button24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/button22" />

    <Button
        android:id="@+id/button24"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="equal_click"
        android:text="@string/equal"
        app:backgroundTint="#f1a43c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/button23" />

    <Button
        android:id="@+id/button22"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="substract_click"
        android:text="@string/substract"
        app:backgroundTint="#f1a43c"
        app:layout_constraintBottom_toTopOf="@+id/button23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button21" />

    <Button
        android:id="@+id/button17"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="_9_click"
        android:text="@string/_9"
        app:backgroundTint="#333333"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button19"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="_3_click"
        android:text="@string/_3"
        app:backgroundTint="#333333"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toStartOf="@+id/button23"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button18" />


    <Button
        android:id="@+id/button18"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="_6_click"
        android:text="@string/_6"
        app:backgroundTint="#333333"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintEnd_toStartOf="@+id/button22"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/button13"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="_8_click"
        android:text="@string/_8"
        app:backgroundTint="#333333"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button17"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button15"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="_2_click"
        android:text="@string/_2"
        app:backgroundTint="#333333"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <Button
        android:id="@+id/button16"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="dot_click"
        android:text="@string/dot"
        app:backgroundTint="#333333"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button24"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <Button
        android:id="@+id/button14"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="_5_click"
        android:text="@string/_5"
        app:backgroundTint="#333333"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintEnd_toStartOf="@+id/button18"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="133dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:autoSizeTextType="uniform"
        android:text="@string/initial_text"
        android:textAlignment="viewEnd"
        android:textColor="#fff"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/button28"
        app:layout_constraintStart_toStartOf="@+id/button25"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="none"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="#a5a5a5"
        android:onClick="sin_click"
        android:text="@string/sin"
        android:textSize="18sp"
        app:backgroundTint="#a5a5a5"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button25" />

    <Button
        android:id="@+id/button6"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="none"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="#a5a5a5"
        android:onClick="cos_click"
        android:text="@string/cos"
        android:textSize="18sp"
        app:backgroundTint="#a5a5a5"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button26" />

    <Button
        android:id="@+id/button7"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="none"
        android:background="@drawable/roundedbutton"
        android:onClick="tan_click"
        android:text="@string/tan"
        android:textSize="18sp"
        app:backgroundTint="#a5a5a5"
        app:layout_constraintBottom_toTopOf="@+id/button17"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button27" />

    <Button
        android:id="@+id/button8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="division_click"
        android:text="@string/division"
        app:backgroundTint="#f1a43c"
        app:layout_constraintBottom_toTopOf="@+id/button21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button28" />

    <Button
        android:id="@+id/button9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="_7_click"
        android:text="@string/_7"
        app:backgroundTint="#333333"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button10"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="_4_click"
        android:text="@string/_4"
        app:backgroundTint="#333333"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button11"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="_1_click"
        android:text="@string/_1"
        app:backgroundTint="#333333"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/roundedbutton"
        android:onClick="_0_click"
        android:text="@string/_0"
        app:backgroundTint="#333333"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button15"
        app:layout_constraintStart_toStartOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button11"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.chip.Chip
        android:id="@+id/degree_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autoSizeTextType="none"
        android:onClick="degree_click"
        android:text="@string/deg"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:chipBackgroundColor="#a5a5a5"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>